--- a/be/build.gradle
+++ b/be/build.gradle
@@ -94,11 +94,11 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-tasks.named('asciidoctor') {
-    configurations "asciidoctorExtensions"
-    inputs.dir snippetsDir
-    dependsOn test
-}
+//tasks.named('asciidoctor') {
+//    configurations "asciidoctorExtensions"
+//    inputs.dir snippetsDir
+//    dependsOn test
+//}
 
 task copyDocument(type: Copy) {
     dependsOn asciidoctor
@@ -117,9 +117,9 @@ bootJar {
     }
 }
 
-//test { // 빌드시 테스트 제외
-//	exclude '**/*'
-//}
+test { // 빌드시 테스트 제외
+	exclude '**/*'
+}
 
 //    ---------------------------------------Query DSL--------------------------------------------
 // 경로 지정
