--- a/fe/package.json
+++ b/fe/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.4.1",
     "redux": "^4.2.1",
     "tailwindcss-percentage-width": "^1.0.3",
     "typescript": "^4.9.5"
