--- a/fe/package.json
+++ b/fe/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.4.1",
     "redux": "^4.2.1",
+    "swiper": "^9.1.1",
     "tailwindcss-percentage-width": "^1.0.3",
     "typescript": "^4.9.5"
   },
