--- a/be/.gitignore
+++ b/be/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
 .gradle
 build/
+build/generated-snippets/
 #!gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -22,6 +23,7 @@ bin/
 *.iws
 *.iml
 *.ipr
+*.adoc
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
