--- a/be/build.gradle
+++ b/be/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2' // 썸네일 생성
     implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.11' // 썸네일 생성
     implementation 'commons-io:commons-io:2.11.0' // 사진 업로드
-    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5' // 사진 업로드
+    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4' // 사진 업로드
     //    --------------------------------------------------------------------------------------------
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -94,11 +94,11 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-tasks.named('asciidoctor') {
-    configurations "asciidoctorExtensions"
-    inputs.dir snippetsDir
-    dependsOn test
-}
+//tasks.named('asciidoctor') {
+//    configurations "asciidoctorExtensions"
+//    inputs.dir snippetsDir
+//    dependsOn test
+//}
 
 task copyDocument(type: Copy) {
     dependsOn asciidoctor
