--- a/be/build.gradle
+++ b/be/build.gradle
@@ -94,11 +94,11 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-tasks.named('asciidoctor') {
-    configurations "asciidoctorExtensions"
-    inputs.dir snippetsDir
-    dependsOn test
-}
+//tasks.named('asciidoctor') {
+//    configurations "asciidoctorExtensions"
+//    inputs.dir snippetsDir
+//    dependsOn test
+//}
 
 task copyDocument(type: Copy) {
     dependsOn asciidoctor
