Minor Bug Fixed

--- a/be/build.gradle
+++ b/be/build.gradle
@@ -78,8 +78,8 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.24'
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final' // Mapstruct
-//    implementation "com.h2database:h2" // h2
-    runtimeOnly 'mysql:mysql-connector-java:8.0.28'
+    implementation "com.h2database:h2" // h2
+//    runtimeOnly 'mysql:mysql-connector-java:8.0.28'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis' // Redis
 //    implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2' // 내장 Redis
     //    -----------------------------------------TEST-----------------------------------------------
