--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -44,7 +44,7 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
     open-in-view: true
     properties:
