--- a/fe/package.json
+++ b/fe/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/event-source-polyfill": "^1.0.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.19",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "browser-image-compression": "^2.0.2",
+    "event-source-polyfill": "^1.0.31",
     "heic2any": "^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
