--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -66,7 +66,7 @@ spring:
             client-authentication-method: POST
             authorization-grant-type: authorization_code
             scope:
-              - account_email
+#              - account_email
               - profile_nickname
               - profile_image
             client_name: Kakao
