--- a/fe/.env
+++ b/fe/.env
@@ -2,3 +2,12 @@ REACT_APP_API_URL=https://api.akkkiri.co.kr/api
 REACT_APP_KAKAO_API_KEY=37c9ba6d648437570438f55bbc400af6
 REACT_APP_KAKAO_REST_KEY=3c1d40614ee038dde6e45dc15964476c
 REACT_APP_NAVER_CLIENT_KEY=wcto8DPTmhNWmRN4xmsa
+#aws iam 작성 시 나오는 액세스 키와 시크릿 키
+MY_AWS_ACCESS_KEY=AKIAZEO65VA6OB7EV2VN
+MY_AWS_SECRET_KEY=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
+
+#버킷 이름
+MY_AWS_S3_BUCKET=ewha-image-bucket
+
+#버킷 리전
+MY_AWS_S3_BUCKET_REGION=ap-northeast-2
