--- a/fe/package.json
+++ b/fe/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.312.0",
+    "@aws-sdk/s3-request-presigner": "^3.312.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +13,7 @@
     "@types/node": "^16.18.19",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "aws-sdk": "^2.1359.0",
     "axios": "^1.3.4",
     "browser-image-compression": "^2.0.2",
     "heic2any": "^0.0.4",
