--- a/fe/package.json
+++ b/fe/package.json
@@ -21,6 +21,7 @@
     "heic2any": "^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/react-helmet": "^6.1.6",
     "tailwindcss": "^3.2.7"
   }
 }
